# ggaze

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  README.md  ggaze-config.h.in  meson.build  meson_options.txt
.woodpecker/: ci.yml
data/: ggaze.1  meson.build  org.buetow.ggaze.desktop  org.buetow.ggaze.gschema.xml  org.buetow.ggaze.metainfo.xml
docs/: IMPLEMENTATION.md  PLAN.md  README.md  architecture.md  coding-conventions.md  gegl.md  goals-and-scope.md  open-questions.md  roadmap.md  tech-stack.md  ui-and-interactions.md
packaging/: ggaze.spec
src/: app.c  app.h  clipboard.c  clipboard.h  enhancer.c  enhancer.h  gridview.c  gridview.h  info.c  info.h  main.c  meson.build  mover.c  mover.h  navigator.c  navigator.h  opener.c  opener.h  runner.c  runner.h  shortcuts.c  shortcuts.h  texturecache.c  texturecache.h  thumbnail.c  thumbnail.h  trash.c  trash.h  viewer.c  viewer.h  window.c  window.h
src/loader/: detect.c  detect.h  loader.c  loader.h
src/loader/backends/: avif.c  heif.c  jpeg.c  jxl.c  pixbuf.c
tests/: lsan_suppressions.txt  meson.build  test_app.c  test_bootstrap.c  test_clipboard.c  test_detect.c  test_enhancer.c  test_full_lifecycle.c  test_grid_cull.c  test_info.c  test_loader_jpeg.c  test_loader_pixbuf.c  test_marks.c  test_mover.c  test_navigator.c  test_open_and_show.c  test_opener.c  test_progressive_jpeg.c  test_responsive_nav.c  test_runner.c  test_shortcut.c  test_texturecache.c  test_thumbnail.c  test_trash.c  test_walk_folder.c  test_window.c
tests/fixtures/: gen.py
tests/integration/: meson.build
